src/test/deca/syntax/valid/test_synt/class/class_with_method.deca
// Description:
//    Test de declaration d'une classe avec une methode dedans
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 20/01/2022


class Maths{

    int power(int x){
        return x*x;
    }
}

{
    int y ;
    Maths m = new Maths();
    y = m.power(2);
}
